--- a/flipquizz/WebApp/www/index.html
+++ b/flipquizz/WebApp/www/index.html
@@ -5,32 +5,54 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mon titre</title>
+    <link rel="stylesheet" href="css/app.css">
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="js/Quiz.js"></script>
+    <script src="js/Team.js"></script>
+    <script src="js/Game.js"></script>
     <script src="js/app.js"></script>
 </head>
 
 <body>
     <div id="vue">
         <header>
-            <h1>{{ pageTitle }}</h1>
+            <!-- <h1>{{ pageTitle }}</h1> -->
         </header>
         <main>
+            <div>
+                <button v-if="game.teams.length > 0" v-on:click="deleteTeam()">-</button>
+                <button v-if="game.teams.length < 4 "v-on:click="addTeam()">+</button>
+            </div>
+            <div class="team-container">
+                <article class="team" :data-id="team.id" v-for="team in game.teams">
+                    {{ team.name }} <br>
+                    {{ team.score }}
+                </article>
+            </div>
+
+            <div>
+                <p v-for="quiz in quizzes">
+                    {{ quiz.quiz_theme }}
+                </p>
+            </div>
+
+            <!-- <hr>
             {{ renderBody }}
             <button id="btn">CLICK ME /!\</button>
             <br>
             <input v-model="pageTitle">
-            <input v-model="year">
+            <input v-model="year"> -->
         </main>
         <footer>
-            <p>&copy; Copyright ARFP {{ year }}</p>
-            <p>Crédits</p>
+            <p>&copy; Copyright ARFP </p>
+            <!-- <p>Crédits</p>
             <div v-for="author in authors">
                 <p>{{ author }}</p>
             </div>
             <div v-if="isActive">Ceci est affiché!</div>
             <div v-if="year >= 2025">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae nisi consequatur esse
                 ex qui nobis repellat laboriosam, mollitia animi accusantium tempora enim, natus ratione nam perferendis
-                unde iste. Officia, enim.</div>
+                unde iste. Officia, enim.</div> -->
         </footer>
     </div>
 </body>
