--- a/flipquizz/WebApp/www/index.html
+++ b/flipquizz/WebApp/www/index.html
@@ -7,6 +7,7 @@
     <title>Mon titre</title>
     <link rel="stylesheet" href="css/app.css">
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="js/Db.js"></script>
     <script src="js/Quiz.js"></script>
     <script src="js/Team.js"></script>
     <script src="js/Game.js"></script>
