--- a/flipquizz/WebApp/www/index.html
+++ b/flipquizz/WebApp/www/index.html
@@ -8,23 +8,27 @@
     <link rel="stylesheet" href="css/app.css">
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="js/Db.js"></script>
-    <script src="js/Quiz.js"></script>
-    <script src="js/Category.js"></script>
     <script src="js/Question.js"></script>
+    <script src="js/Category.js"></script>
+    <script src="js/Quiz.js"></script>
     <script src="js/Team.js"></script>
     <script src="js/Game.js"></script>
     <script src="js/app.js"></script>
 </head>
 
 <body>
+    <input type="button" value="" class="reload">
+
     <div id="vue">
+
         <header>
-            <h1>Welcome to the candy shop !</h1>
+            <h1 class="titre">{{ game.quiz.quiz_theme }}</h1>
         </header>
+
         <main class="main">
 
+            <div class="team-container">
 
-            <div class="addTeam">
                 <article class="btn">
                     <h2>Number of teams</h2>
                     <button class="btnPlus" v-on:click="addTeam()">+</button>
@@ -35,37 +39,156 @@
                     <label for="">{{ team.name }}</label>
                     <input v-model="team.name">
                 </article>
+
             </div>
 
 
-            <div class="quizzes" v-if="game.teams.length > 0">
-                <article v-for="quiz in quizzes" class="quizTheme">
-                    <input type="radio" name="the_quiz" :id="quiz.quiz_id" :data-id="quiz.quiz_id"
-                        v-on:change="loadCategories">
-                    <label for="">{{ quiz.quiz_theme }}</label>
-                </article>
-                <article class="categories" v-for="category in categories">
-                    <!-- <input type="radio" name="the_category" :id="category.category_id" :data-id="category.category_id" v-on:change="loadQuestions" > -->
-                    <label for="">{{ category.category_name }}</label>
-                </article>
+            <div class="quiz-container" v-if="game.teams.length > 0">
 
-                <!-- <article class="questions" v-for="question in questions">
-                    <label for="">{{ question.question_content }}</label>
-                </article> -->
-                <article class="start">
-                    <!-- <input type="button" value="Start the game"> -->
-                    <a href="#">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                        Start
-                    </a>
-                </article>
+                <div v-if="game.teams.length > 0">
+                    <article v-for="quiz in quizzes" class="quizTheme">
+                        <input type="radio" name="the_quiz" :id="quiz.quiz_id" :data-id="quiz.quiz_id"
+                            v-on:change="loadCategories">
+                        <label for="">{{ quiz.quiz_theme }}</label>
+                    </article>
+                </div>
+
+                <div v-if="game.quiz.categories.length > 0">
+                    <article class="category-container" v-for="category in game.quiz.categories">
+                        <label for="">{{ category.category_name }}</label>
+                    </article>
+                </div>
+
             </div>
 
         </main>
-        <footer class="team-container" v-if="game.teams.length > 0">
+
+        <article class="start">
+            <input type="button" id="btnStart" value="Start the quiz">
+        </article>
+
+        <section class="right">
+
+            <article>
+                <header class="theme">
+                    <h2>Theme</h2>
+                </header>
+                <div class="score">
+                    <h3>100</h3>
+                </div>
+                <div class="score">
+                    <h3>200</h3>
+                </div>
+                <div class="score">
+                    <h3>300</h3>
+                </div>
+                <div class="score">
+                    <h3>400</h3>
+                </div>
+                <div class="score">
+                    <h3>500</h3>
+                </div>
+            </article>
+
+            <article>
+                <header class="theme">
+                    <h2>Theme</h2>
+                </header>
+                <div class="score">
+                    <h3>100</h3>
+                </div>
+                <div class="score">
+                    <h3>200</h3>
+                </div>
+                <div class="score">
+                    <h3>300</h3>
+                </div>
+                <div class="score">
+                    <h3>400</h3>
+                </div>
+                <div class="score">
+                    <h3>500</h3>
+                </div>
+            </article>
+
+            <article>
+                <header class="theme">
+                    <h2>Theme</h2>
+                </header>
+                <div class="score">
+                    <h3>100</h3>
+                </div>
+                <div class="score">
+                    <h3>200</h3>
+                </div>
+                <div class="score">
+                    <h3>300</h3>
+                </div>
+                <div class="score">
+                    <h3>400</h3>
+                </div>
+                <div class="score">
+                    <h3>500</h3>
+                </div>
+            </article>
+
+            <article>
+                <header class="theme">
+                    <h2>Theme</h2>
+                </header>
+                <div class="score">
+                    <h3>100</h3>
+                </div>
+                <div class="score">
+                    <h3>200</h3>
+                </div>
+                <div class="score">
+                    <h3>300</h3>
+                </div>
+                <div class="score">
+                    <h3>400</h3>
+                </div>
+                <div class="score">
+                    <h3>500</h3>
+                </div>
+            </article>
+
+            <article>
+                <header class="theme">
+                    <h2>Theme</h2>
+                </header>
+                <div class="score">
+                    <h3>100</h3>
+                </div>
+                <div class="score">
+                    <h3>200</h3>
+                </div>
+                <div class="score">
+                    <h3>300</h3>
+                </div>
+                <div class="score">
+                    <h3>400</h3>
+                </div>
+                <div class="score">
+                    <h3>500</h3>
+                </div>
+            </article>
+
+            <div id="modalPrincipal">
+                <input type="button" alt="" class="close">
+                <h2>Question ? </h2>
+                <button class="btnReponse">Response</button>
+                <div id="modalSecondary">
+                    <input type="button" class="back">
+                    <input type="button" value="" class="closeTotal">
+                    <h2>Answer</h2>
+                    <input type="button" class="btnValidate" value="Validate">
+                </div>
+            </div>
+
+        </section>
+
+        <footer class="footer" v-if="game.teams.length > 0">
             <article class="team" :data-id="team.id" v-for="team in game.teams">
                 <label for="">{{ team.name }}</label>
                 <label for="">Score : {{ team.score }}</label>
@@ -76,6 +199,11 @@
 </body>
 
 </html>
+
+<!-- <input type="radio" name="the_category" :id="category.category_id" :data-id="category.category_id" v-on:change="loadQuestions" > -->
+<!-- <article class="questions" v-for="question in questions">
+    <label for="">{{ question.question_content }}</label>
+</article> -->
 
 <!-- <p>Crédits</p>
 <div v-for="author in authors">
