--- a/flipquizz/test/home7.html
+++ b/flipquizz/test/home7.html
@@ -273,7 +273,7 @@
             <h2>Question ? </h2>
             <button class="btnReponse">Response</button>
             <div id="modalSecondary">
-                <input type="button" value="" class="closeTotal">
+                <input type="button" value="x" class="closeTotal">
                 <h2>Answer</h2>
                 <input type="button" class="btnValidate" value="Validate">                
             </div>
