--- a/flipquizz/WebApp/www/index.html
+++ b/flipquizz/WebApp/www/index.html
@@ -18,61 +18,60 @@
 
 <body>
     <input type="button" value="" class="reload">
-
     <div id="vue">
 
         <header>
             <h1 class="titre">{{ game.quiz.quiz_theme }}</h1>
         </header>
 
-        <main class="main" v-if="!game.started">
+        <input type="button" class="start_conf" value="Start Configuration" v-if="!disabled_conf"
+            v-on:click="clickConf">
+
+        <div class="quiz-container" v-if="!disabled">
+            <div>
+                <article v-for="quiz in quizzes" class="quiz_theme">
+                    <input type="radio" name="the_quiz" :id="quiz.quiz_id" :data-id="quiz.quiz_id"
+                        v-on:change="loadCategories">
+                    <label for="">{{ quiz.quiz_theme }}</label>
+                </article>
+            </div>
+
+            <div v-if="game.quiz.categories.length > 0">
+                <article class="category-container" v-for="category in game.quiz.categories">
+                    <label for="">{{ category.category_name }}</label>
+                </article>
+            </div>
+            <input type="button" value="Next" v-if="game.quiz.categories.length > 0" v-on:click="clickAddTeams">
+        </div>
+
+        <main class="main" v-if="disabled">
 
             <div class="team-container">
-
                 <article class="btn">
                     <h2>Number of teams</h2>
-                    <button class="btnPlus" v-on:click="addTeam()">+</button>
-                    <button class="btnMinus" v-if="game.teams.length > 0" v-on:click="deleteTeam()">-</button>
+                    <button class="btnPlus" v-on:click="addTeam()"></button>
+                    <button class="btnMinus" v-if="game.teams.length > 0" v-on:click="deleteTeam()"></button>
                 </article>
 
                 <article class="team" v-for="team in game.teams">
                     <label for="">{{ team.name }}</label>
                     <input v-model="team.name">
                 </article>
-
+                            <article class="start">
+                <input type="button" id="btnStart" value="Start the quiz"
+                    :disabled="game.teams.length > 0 ? false : true ">
+                <!-- v-on:click='gameStarted' -->
+            </article>
             </div>
-
-
-            <div class="quiz-container" v-if="game.teams.length > 0">
-
-                <div v-if="game.teams.length > 0">
-                    <article v-for="quiz in quizzes" class="quizTheme">
-                        <input type="radio" name="the_quiz" :id="quiz.quiz_id" :data-id="quiz.quiz_id"
-                            v-on:change="loadCategories">
-                        <label for="">{{ quiz.quiz_theme }}</label>
-                    </article>
-                </div>
-
-                <div v-if="game.quiz.categories.length > 0">
-                    <article class="category-container" v-for="category in game.quiz.categories">
-                        <label for="">{{ category.category_name }}</label>
-                    </article>
-                </div>
-
-            </div>
-
         </main>
 
-        <article class="start" v-if="!game.started" >
-            <input type="button" id="btnStart" value="Start the quiz" :disabled="game.quiz.categories.length > 0 ? false : true ">
-            <!-- v-on:click='gameStarted' -->
-        </article>
 
-        <section class="right" >
-            <input type="button" class="back_main">
+
+        <section class="right">
+            <!-- <input type="button" class="back_main" v-if="!game.started"> -->
             <article>
                 <header class="theme">
-                    <h2>Theme</h2>
+                    <h2>ThemeTheme ThemeTheme</h2>
                 </header>
                 <div class="score">
                     <h3>100</h3>
