--- a/flipquizz/WebApp/www/index.html
+++ b/flipquizz/WebApp/www/index.html
@@ -71,7 +71,7 @@
         <section class="right" v-if="game.started">
             <!-- <input type="button" class="back_main" > -->
             <article>
-                <header class="theme">
+                <header class="theme" v-for=''>
                     <h2>ThemeTheme ThemeTheme</h2>
                 </header>
                 <div class="score">
